infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: annobib-app
  labels:
    app: annobib
    component: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: annobib
    component: app
